# htwd-se-SubscriptionGuard

./: .gitignore  README.md  app.js  index.html  styles.css  upload-manifest.json
scripts/: Build-TauriApp.ps1  Run-TauriDev.ps1  prepare-dist.ps1
src/: analysis.js  app-controller.js  constants.js  ui.js  utils.js
src-tauri/: Cargo.toml  prepare-dist.cmd  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/data/: sampleSubscriptions.js
src/services/: api.js  localRepository.js
