[package]
name = "subscriptionguard"
version = "0.1.0"
description = "SubscriptionGuard desktop app"
authors = ["Codex"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
